--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+.parcel-cache
 
 # Next.js build output
 .next
@@ -102,3 +103,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+.idea/
+
+notes-to-self.md
