--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "7",
     "@babel/plugin-transform-flow-strip-types": "7",
+    "@parcel/compressor-gzip": "^2.6.2",
     "@parcel/transformer-sass": "2",
     "@parcel/transformer-svg-react": "^2.6.2",
     "buffer": "^6.0.3",
