change compression and serve uncompressed option too

--- a/.parcelrc
+++ b/.parcelrc
@@ -4,7 +4,11 @@
     "jsx:*.svg": ["@parcel/transformer-svg-react"],
     "jsx:*": ["..."]
   },
-    "compressors": {
-      "*.{html,css,js,svg,map}": ["@parcel/compressor-gzip"]
-    }
+  "compressors": {
+    "*.{html,css,js,svg,map}": [
+      "...",
+      "@parcel/compressor-gzip",
+      "@parcel/compressor-brotli"
+    ]
+  }
 }
