--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-interval-rerender": "^1.1.0",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-tageditor": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "7",
