--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^17.0.2",
     "react-interval-rerender": "^1.1.0",
     "react-router-dom": "^6.2.1",
-    "react-tageditor": "^0.2.3",
-    "uuid": "^9.0.0"
+    "react-tageditor": "^0.2.3"
   },
   "devDependencies": {
     "@babel/core": "7",
