--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ProveMeWrong",
+  "name": "TheTruthPost",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
     "antd": "^4.21.4",
+    "color": "^4.2.3",
     "ethers": "^5.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,6 +33,7 @@
     "build": "parcel build"
   },
   "prettier": {
-    "printWidth": 120
+    "printWidth": 120,
+    "tabWidth": 2
   }
 }
