--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "start": "parcel",
+    "start": "parcel --no-cache",
     "build": "parcel build"
   },
   "prettier": {
