--- a/.github/workflows/enforceGitFlow.yml
+++ b/.github/workflows/enforceGitFlow.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Fail if PR is from develop branch
         run: |
-          if [[ "${{ github.event.pull_request.head.ref }}" =~ ^release/.* ]]; then
+          if [[ "${{ github.event.pull_request.head.ref }}" !~ ^release/.* ]]; then
             echo "Error: Merging 'develop' branch into 'main' branch is not allowed."
             exit 1
           fi
