--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "antd": "^4.21.4",
     "color": "^4.2.3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
