--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "color": "^4.2.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.6.5",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-interval-rerender": "^1.1.0",
