--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-interval-rerender": "^1.1.0",
     "react-router-dom": "^6.2.1",
-    "react-tageditor": "^0.2.3"
+    "react-tageditor": "^0.2.3",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "7",
