--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-interval-rerender": "^1.1.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.2.1",
     "react-tageditor": "^0.2.3",
     "react-toastify": "^9.1.2"
