--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.2.1",
     "react-tageditor": "^0.2.3",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7",
