--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@parcel/transformer-svg-react": "^2.6.2",
     "buffer": "^6.0.3",
     "flow-bin": "0",
+    "husky": "^8.0.3",
     "parcel": "2",
     "path-browserify": "^1.0.1",
     "postcss": "8",
@@ -36,7 +37,15 @@
   },
   "scripts": {
     "start": "parcel --no-cache",
-    "build": "parcel build"
+    "build": "parcel build",
+    "format": "prettier --write .",
+    "precommit": "npm run format",
+    "postinstall": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run precommit"
+    }
   },
   "prettier": {
     "printWidth": 120,
