--- a/package.json
+++ b/package.json
@@ -33,19 +33,13 @@
     "postcss": "8",
     "postcss-modules": "4",
     "prettier": "2",
+    "pretty-quick": "^3.1.3",
     "process": "^0.11.10"
   },
   "scripts": {
     "start": "parcel --no-cache",
     "build": "parcel build",
-    "format": "prettier --write .",
-    "precommit": "npm run format",
     "postinstall": "husky install"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run precommit"
-    }
   },
   "prettier": {
     "printWidth": 120,
