--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "start": "parcel --no-cache",
+    "start": "parcel",
     "build": "parcel build"
   },
   "prettier": {
