--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@types/react": "^18.2.18",
     "antd": "^4.21.4",
     "color": "^4.2.3",
     "ethers": "^5.6.5",
