--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "flow-bin": "0",
     "husky": "^8.0.3",
     "parcel": "2",
+    "parcel-transformer-ts-css-modules": "^1.0.14",
     "path-browserify": "^1.0.1",
     "postcss": "8",
     "postcss-modules": "4",
