--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@walletconnect/ethereum-provider": "^2.9.1",
+    "@walletconnect/modal": "^2.6.1",
     "antd": "^4.21.4",
     "color": "^4.2.3",
     "ethers": "^5.6.5",
@@ -16,7 +18,8 @@
     "react-tageditor": "^0.2.3",
     "react-toastify": "^9.1.2",
     "rehype-katex": "^6.0.3",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "viem": "^1.2.9"
   },
   "devDependencies": {
     "@babel/core": "7",
@@ -25,6 +28,7 @@
     "@parcel/compressor-gzip": "^2.6.2",
     "@parcel/transformer-sass": "2",
     "@parcel/transformer-svg-react": "^2.6.2",
+    "@types/react": "^18.2.14",
     "buffer": "^6.0.3",
     "flow-bin": "0",
     "husky": "^8.0.3",
